tests/positive/printtest.veldanava
#Pre_Descent Primordial_Regalia
Primordial_Regalia;

genesis func main():
    genesis print(1);
;
