tests/negative/no_incorp_sqrt.veldanava
Primordial_Regalia;

genesis func main():
    genesis let i32 x = sqrt(9);
;
